# modbus-binding

./: README.md  modbus.pc.in
autobuild/linux/: autobuild
conf.d/cmake/: 00-debian-config.cmake  00-fedora-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/packaging/deb/: agl-service-modbus.dsc  debian.agl-service-modbus-bin.install  debian.agl-service-modbus-dev.install  debian.agl-service-modbus-plugin-kingpigeon.install  debian.agl-service-modbus-plugin-raymarine-anemometer.install  debian.changelog  debian.control  debian.rules
conf.d/packaging/rpm/: agl-service-modbus.service  agl-service-modbus.spec  modbus-binding.service  morbus-binding.spec
conf.d/project/etc/: CMakeLists.txt  control-modbus_kingpigeon-config.json  control-modbus_raymarine-anemometer-config.json  control-modbus_seanatic-bench.json  modbus-kingpigeon-config.json  modbus-kpmt110-config.json  modbus-mt110@lorient-config.json
conf.d/wgt/: config.xml.in
docs/: 1-architecture_presentation.md  2-installation_guide.md  3-configuration.md  4-running_and_testing.md  api-services-book.yml
htdocs/: CMakeLists.txt  index.html
src/: CMakeLists.txt  modbus-binding.c  modbus-binding.h  modbus-encoder.c  modbus-glue.c
src/plugins/: CMakeLists.txt  LICENCE
src/plugins/kingpigeon/: CMakeLists.txt  kingpigeon-encoder.c
src/plugins/raymarine-anenometer/: CMakeLists.txt  raymarine-anenometer.c
